# bookstore3-tests

./: Dockerfile  db.sqlite3  pyproject.toml
core/: settings.py
