[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Jonas Maia <jonasgmaia2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "^6.0.3"
factory-boy = "^3.3.3"
pytest = "^9.0.2"
djangorestframework = "^3.17.1"
django-extensions = "^4.1"
django-debug-toolbar = "^6.2.0"
psycopg2-binary = "^2.9.11"
flake8 = "^7.3.0"
dj-database-url = "^3.1.2"
gunicorn = "^25.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"